package ar.edu.unq.po2.sem;

public interface Entidad {
	
	public void inicioEstacionamiento(Estacionamiento estacionamiento);
	public void finEstacionamiento(Estacionamiento estacionamiento);

}
