package ar.edu.unq.po2.sem;

public interface EstadoGPS {
    void cambiar(App app);

    boolean estaEncendido();
}
