package ar.edu.unq.po2.sem;

public interface EstadoMovimiento {
    void driving();

    void walking();
}
